--- a/mapsapp/templates/mapsapp/maps.html
+++ b/mapsapp/templates/mapsapp/maps.html
@@ -12,7 +12,7 @@
 
         <ul class="maplist">
             {% for rms in rmss %}
-                <li><a href="{% url 'map' rms_id=rms.uuid %}">{{ rms.name }}
+                <li><a href="{% url 'map' rms_id=rms.id slug=rms.slug %}">{{ rms.name }}
                     <small>(by {{ rms.authors }})</small>
                 </a></li>
             {% endfor %}
