Change collection url format
Use shorter ID and slug instead of UUID

--- a/mapsapp/templates/mapsapp/collections.html
+++ b/mapsapp/templates/mapsapp/collections.html
@@ -14,7 +14,7 @@
 
         <ul class="mapslist">
             {% for collection in collections %}
-                <li><a href="{% url 'collection' collection_id=collection.uuid %}">{{ collection.name }}
+                <li><a href="{% url 'collection' collection_id=collection.id slug=collection.slug %}">{{ collection.name }}
                     <small>(by {{ collection.authors }})</small>
                 </a></li>
             {% endfor %}
