Link to mods.aoe2map.net instead of directly to ageofempires.com

--- a/mapsapp/templates/mapsapp/map.html
+++ b/mapsapp/templates/mapsapp/map.html
@@ -149,7 +149,7 @@
                                target="_blank">Website</a>
                         {% endif %}
                         {% if rms.mod_id %}
-                            <a href="https://www.ageofempires.com/mods/details/{{ rms.mod_id }}/"
+                            <a href="https://mods.aoe2map.net/{{ rms.mod_id }}"
                                class="card-link btn btn-outline-secondary"
                                target="_blank">Go to Mod</a>
                         {% endif %}
