--- a/mapsapp/templates/mapsapp/collection.html
+++ b/mapsapp/templates/mapsapp/collection.html
@@ -40,7 +40,7 @@
         <p class="markdown-text" id="description">{{ collection.description }}</p>
         <div class="text-center">
             {% if collection.mod_id %}
-                <a href="https://www.ageofempires.com/mods/details/{{ collection.mod_id }}/"
+                <a href="https://mods.aoe2map.net/{{ collection.mod_id }}"
                    class="card-link btn btn-outline-secondary mr-3"
                    target="_blank">Go to Mod</a>
             {% endif %}
