Fix mod download buttons on map page

--- a/mapsapp/templates/mapsapp/map.html
+++ b/mapsapp/templates/mapsapp/map.html
@@ -129,8 +129,8 @@
                             </button>
                             <div class="dropdown-menu">
                                 <button class="dropdown-item viewCodeButton">View rms code</button>
-                                <button class="dropdown-item deModButton">Download ZIP for DE mod</button>
-                                <button class="dropdown-item wkVooblyModButton">Download ZIP for WK Voobly mod
+                                <button class="dropdown-item" id="deModButton">Download ZIP for DE mod</button>
+                                <button class="dropdown-item" id="wkVooblyModButton">Download ZIP for WK Voobly mod
                                 </button>
                                 <button class="dropdown-item x256TechButton">
                                     256x tech version (DE)
