Simplify tag urls

--- a/mapsapp/templates/mapsapp/tags.html
+++ b/mapsapp/templates/mapsapp/tags.html
@@ -3,19 +3,14 @@
 {% block pagetitle %}Tags – {% endblock %}
 
 {% block subtitle %}
-    <h4 class="text-center">Maps tagged with ›{% for tag in tagset %}{{ tag }}{% if not forloop.last %},
-    {% endif %}{% endfor %}‹</h4>
+    <h4 class="text-center">Maps tagged with ›{{ tag }}‹</h4>
 {% endblock %}
 
 {% block content %}
     <div class="row alltags">
         <div class="col-md-8 offset-md-2">
-            {% for tag in alltags %}
-                {% if tag in tagset %}
-                    <a href="./remove/{{ tag.id }}/" class="badge badge-primary">{{ tag }}</a>
-                {% else %}
-                    <a href="./{{ tag.id }}/" class="badge badge-secondary">{{ tag }}</a>
-                {% endif %}
+            {% for single_tag in alltags %}
+                <a href="./{{ single_tag.id }}" class="badge badge-secondary">{{ single_tag }}</a>
             {% endfor %}
         </div>
     </div>
